grammar.js
    source_file: ($) =>
      seq(
        optional($.module_declaration),
        repeat($.import_declaration),
        repeat($._top_declaration),
      ),

    _top_declaration: ($) =>
      choice(
        $.function_declaration,
        $.type_declaration,
        $.protocol_declaration,
        $.test_declaration,
        $.top_let_declaration,
        $.strict_declaration,
      ),

    // Top-level let binding (constants) — name can be lowercase or UPPERCASE
    top_let_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        choice("let", "var"),
        choice($.identifier, $.type_name),
        optional(seq(":", $._type_expr)),
        "=",
        $.expression,
      ),

    // strict mode directive: `strict total`
    attribute: ($) =>
      seq(
        token(seq("@", /[a-z_][a-zA-Z0-9_]*/)),
        optional(
          seq(
            "(",
            optional(seq($._attribute_item, repeat(seq(",", $._attribute_item)))),
            ")",
          ),
        ),
      ),

    // Positional, or named: `@rewrite(name="...", from="...")`.
    _attribute_item: ($) =>
      choice($._attribute_arg, seq($.identifier, "=", $._attribute_arg)),

    function_declaration: ($) =>
      seq(
        repeat($.attribute),
        optional($.visibility_modifier),
        optional("effect"),
        "fn",
        $.function_name,
        optional($.generic_params),
        $.parameter_list,
        "->",
        $._type_expr,
        optional($.fallible_marker),
        optional(seq("=", $.expression)),
      ),

    // ADR-0009 / ADR-0012: `-> T!` is Result[T, String], `-> T!E` is
    // Result[T, E]; E is a named, possibly module-qualified, type.
    fallible_marker: ($) =>
      prec.right(seq("!", optional(choice($.type_name, $.qualified_type, $.generic_type)))),

    function_name: ($) =>
      choice(
        $.identifier,
        $.predicate_identifier,
        seq($.type_name, ".", choice($.identifier, $.predicate_identifier)),
      ),

    predicate_identifier: ($) => /[a-z_][a-zA-Z0-9_]*\?/,

    parameter_list: ($) =>
      seq(
        "(",
        optional(seq($.parameter, repeat(seq(",", $.parameter)))),
        optional(","),
        ")",
      ),

    // `self` is an ordinary identifier; the type annotation is optional for it.
    // Default arguments: `name: Type = expr`.
    parameter: ($) =>
      seq(
        optional("mut"),
        $.identifier,
        optional(seq(":", $._type_expr)),
        optional(seq("=", $.expression)),
      ),

    type_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        "type",
        $.type_name,
        optional($.generic_params),
        optional($.conventions_clause),
        "=",
        $._type_body,
      ),

    // `type Name: Eq, Repr = ...` — conventions/protocols the type satisfies.
    _type_body: ($) =>
      choice($.record_type, $.variant_type, $._type_expr),

    record_type: ($) =>
      seq(
        "{",
        optional(seq($.field_def, repeat(seq(",", $.field_def)))),
        optional(","),
        "}",
      ),

    // Field definition in type declarations — supports default values
    field_def: ($) =>
      seq(
        $.identifier,
        ":",
        $._type_expr,
        optional(seq("=", $.expression)),
      ),

    // Default values allowed in field definitions
    variant_type: ($) =>
      seq(optional("|"), $.variant_case, repeat(seq("|", $.variant_case))),

    variant_case: ($) =>
      seq(
        $.type_name,
        optional(
          choice(
            seq(
              "(",
              seq($._type_expr, repeat(seq(",", $._type_expr))),
              ")",
            ),
            seq(
              "{",
              seq($.field_def, repeat(seq(",", $.field_def))),
              optional(","),
              "}",
            ),
          ),
        ),
      ),

    _type_expr: ($) =>
      choice(
        $.type_name,
        $.qualified_type,
        $.generic_type,
        $.option_type,
        $.function_type,
        $.record_type,
        $.tuple_type,
        $.unit_type,
        $.parenthesized_type,
      ),

    // A type from another module: `core.Usage`, `pkg.sub.Type`.
    qualified_type: ($) =>
      seq($.identifier, repeat(seq(".", $.identifier)), ".", $.type_name),

    // ADR-0010: `T?` is Option[T]. The `?` binds to the atom just before it
    // and never crosses `->`: `(A) -> B?` returns Option[B].
    option_type: ($) =>
      prec(1, seq(
        choice($.type_name, $.qualified_type, $.generic_type, $.tuple_type, $.unit_type, $.parenthesized_type),
        "?",
      )),

    generic_type: ($) =>
      seq(
        choice($.type_name, $.qualified_type),
        "[",
        seq($._type_expr, repeat(seq(",", $._type_expr))),
        "]",
      ),

    // fn(A, B) -> C | Fn(A, B) -> C | (A, B) -> C, each optionally prefixed
    // with `effect` (#1055) and with a fallible return (`-> C!`).
    function_type: ($) =>
      seq(optional("effect"), $._function_type_body),

    // A trailing `!` belongs to the innermost fn type's return, as in the compiler.
    _function_type_body: ($) =>
      prec.right(choice(
        seq(
          choice("fn", "Fn"),
          "(",
          optional(seq($._type_expr, repeat(seq(",", $._type_expr)))),
          ")",
          "->",
          $._type_expr,
          optional($.fallible_marker),
        ),
        seq(
          "(",
          optional(seq($._type_expr, repeat(seq(",", $._type_expr)))),
          ")",
          "->",
          $._type_expr,
          optional($.fallible_marker),
        ),
      )),

    tuple_type: ($) =>
      seq(
        "(",
        $._type_expr,
        ",",
        seq($._type_expr, repeat(seq(",", $._type_expr))),
        ")",
      ),

    parenthesized_type: ($) => seq("(", $._type_expr, ")"),

    protocol_declaration: ($) =>
      seq(
        "protocol",
        $.type_name,
        optional($.generic_params),
        "{",
        repeat($.protocol_method),
        "}",
      ),

    protocol_method: ($) =>
      seq(
        optional("effect"),
        "fn",
        $.function_name,
        optional($.generic_params),
        $.parameter_list,
        "->",
        $._type_expr,
      ),

    test_declaration: ($) =>
      seq("test", $.string_literal, $.block_expression),

    _statement: ($) =>
      choice(
        $.let_statement,
        $.var_statement,
        $.guard_statement,
        $.assignment_statement,
        $.expression_statement,
      ),

    let_statement: ($) =>
      choice(
        // let x = expr  or  let _ = expr
        seq(
          "let",
          choice($.identifier, "_"),
          optional(seq(":", $._type_expr)),
          "=",
          $.expression,
        ),
        // let { a, b } = expr (record destructure)
        seq(
          "let",
          "{",
          seq($.identifier, repeat(seq(",", $.identifier))),
          optional(","),
          "}",
          "=",
          $.expression,
        ),
        // let (a, b) = expr (tuple destructure)
        seq(
          "let",
          "(",
          seq(
            choice($.identifier, "_"),
            repeat(seq(",", choice($.identifier, "_"))),
          ),
          ")",
          "=",
          $.expression,
        ),
      ),

    var_statement: ($) =>
      seq(
        "var",
        $.identifier,
        optional(seq(":", $._type_expr)),
        "=",
        $.expression,
      ),

    // guard cond else body | guard let name = expr else body
    assignment_statement: ($) =>
      prec.right(-1, seq(
        field("target", $.expression),
        "=",
        field("value", $.expression),
      )),

    expression_statement: ($) => $.expression,

    // Expression: left-recursive postfix ops, binary/unary/pipe, match, variant_record, range, primary
    expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.pipe_expression,
        $.compose_expression,
        $.call_expression,
        $.member_expression,
        $.optional_chain_expression,
        $.tuple_index_expression,
        $.index_expression,
        $.unwrap_expression,
        $.to_option_expression,
        $.unwrap_or_expression,
        $.match_expression,
        $.variant_record_expression,
        $.range_expression,
        $.primary_expression,
      ),

    primary_expression: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.heredoc_string,
        $.boolean_literal,
        $.unit_expression,
        $.identifier,
        $.predicate_identifier,
        $.type_name,
        $.list_expression,
        $.map_expression,
        $.record_expression,
        $.tuple_expression,
        $.if_expression,
        $.block_expression,
        $.for_in_expression,
        $.while_expression,
        $.fan_expression,
        $.fan_member,
        $.lambda_expression,
        $.some_expression,
        $.none_expression,
        $.ok_expression,
        $.err_expression,
        $.hole_expression,
        $.todo_expression,
        $.break_expression,
        $.continue_expression,
        $.parenthesized_expression,
        $.ascription_expression,
      ),

    // Decimal (with _ separators) and hex. No binary/octal in Almide.
    integer_literal: ($) =>
      token(choice(/[0-9][0-9_]*/, /0[xX][0-9a-fA-F][0-9a-fA-F_]*/)),

    // 3.14, 1_0.5, 1e9, 2.5E-3
    float_literal: ($) =>
      token(
        choice(
          /[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9]+)?/,
          /[0-9][0-9_]*[eE][+-]?[0-9]+/,
        ),
      ),

    string_literal: ($) =>
      choice(
        seq(
          "\"",
          repeat(
            choice($.escape_sequence, $.string_interpolation, $.string_content),
          ),
          token.immediate("\""),
        ),
        $.single_quote_string,
        $.raw_string,
      ),

    // escapes only, no interpolation
    string_content: ($) => token.immediate(prec(1, /[^"\\$]+|\$|\\[^nrt"$\\xu]|\\/)),

    escape_sequence: ($) => token.immediate(prec(1, /\\([nrt"$\\]|x[0-9a-fA-F]{2}|u\{[0-9a-fA-F]{1,6}\})/)),

    list_expression: ($) =>
      seq(
        "[",
        optional(seq($.expression, repeat(seq(",", $.expression)))),
        optional(","),
        "]",
      ),

    map_expression: ($) =>
      choice(
        seq("[", ":", "]"),
        seq(
          "[",
          seq($.map_entry, repeat(seq(",", $.map_entry))),
          optional(","),
          "]",
        ),
      ),

    map_entry: ($) =>
      seq(field("key", $.expression), ":", field("value", $.expression)),

    record_expression: ($) =>
      seq(
        "{",
        optional($.spread_field),
        optional(seq($.record_field, repeat(seq(",", $.record_field)))),
        optional(","),
        "}",
      ),

    record_field: ($) => seq($.identifier, ":", $.expression),

    spread_field: ($) => seq("...", $.expression, ","),

    // `(expr: Type)` -- an expression with its type written out, e.g.
    // `([]: List[Int])`.
    ascription_expression: ($) =>
      seq("(", $.expression, ":", $._type_expr, ")"),

    tuple_expression: ($) =>
      seq(
        "(",
        $.expression,
        ",",
        seq($.expression, repeat(seq(",", $.expression))),
        ")",
      ),

    // TypeName { field: value, ... } — variant record constructor
    // NOT left-recursive; starts with type_name token directly
    variant_record_expression: ($) =>
      prec.dynamic(-10, prec(PREC.postfix, seq(
        choice($.type_name, $.qualified_type),
        "{",
        optional($.spread_field),
        optional(seq($.record_field, repeat(seq(",", $.record_field)))),
        optional(","),
        "}",
      ))),

    // match expression: starts with "match" keyword, then expression, then "{" arms "}"
    // The match value uses a restricted expression set to avoid TypeName { } ambiguity
    // with variant_record_expression. The key: match_expression starts with "match" keyword
    // which prevents variant_record_expression from stealing the "{" since variant_record_expression
    // is NOT reachable as a prefix of match value (it starts with type_name, not "match").
    //
    // HOWEVER: we must ensure that the expression parsed as match value does NOT itself
    // expand into variant_record_expression. We achieve this by NOT including
    // variant_record_expression in _match_value. Since postfix ops (call, member, index)
    // use $.expression which DOES include variant_record_expression, we define separate
    // _match_* versions of the postfix ops that use _match_value instead.
    match_expression: ($) =>
      seq(
        "match",
        field("value", $._match_value),
        "{",
        repeat1(seq($.match_arm, optional(","))),
        "}",
      ),

    // A restricted expression for match values — everything EXCEPT variant_record_expression
    _match_value: ($) =>
      choice(
        $._match_binary,
        $._match_unary,
        $._match_pipe,
        $._match_compose,
        $._match_call,
        $._match_member,
        $._match_tuple_index,
        $._match_index,
        $._match_range,
        $._match_unwrap,
        $._match_to_option,
        $._match_coalesce,
        $._match_optional_chain,
        $.primary_expression,
      ),

    // Match-safe postfix and compound expressions that don't allow variant_record_expression
    match_arm: ($) =>
      seq(
        field("pattern", $.pattern),
        optional(seq("if", field("guard", $.expression))),
        "=>",
        field("body", $.expression),
      ),

    block_expression: ($) =>
      seq(
        "{",
        repeat(seq($._statement, optional(";"))),
        optional($.expression),
        "}",
      ),


    for_in_expression: ($) =>
      seq(
        "for",
        choice(
          $._for_binder,
          seq(
            "(",
            $._for_binder,
            repeat1(seq(",", $._for_binder)),
            ")",
          ),
        ),
        "in",
        // Like a match value: `for x in ITEMS {` must not read `ITEMS { ... }`
        // as a record.
        $._match_value,
        $.block_expression,
      ),

    _for_binder: ($) => choice($.identifier, "_"),

    fan_expression: ($) =>
      choice(
        seq("fan", $.fan_arms),
        seq("fan", ".", field("head", choice("settle", "any")), $.fan_arms),
        seq("fan", ".", field("head", "race"), optional($.argument_list), $.fan_arms),
        seq("fan", ".", field("head", choice("bounded", "timeout")), $.argument_list, $.block_expression),
      ),

    // Arms separated by `,`; arms on lines of their own read as a block's
    // expression statements, which is what they are to a reader.
    fan_arms: ($) =>
      choice(
        seq("{", $.expression, repeat1(seq(",", $.expression)), optional(","), "}"),
        $.block_expression,
      ),

    fan_member: ($) => seq("fan", ".", $.identifier),

    lambda_expression: ($) =>
      prec.right(1, seq(
        "(",
        optional(
          seq($.lambda_param, repeat(seq(",", $.lambda_param))),
        ),
        ")",
        "=>",
        $.expression,
      )),

    lambda_param: ($) =>
      choice(seq($.identifier, ":", $._type_expr), $.identifier, "_", $.tuple_param),

    // `((k, v)) => ...` takes a pair apart.
    tuple_param: ($) =>
      seq("(", $.lambda_param, repeat1(seq(",", $.lambda_param)), ")"),

    // call_expression: left-recursive via $.expression
    call_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(
          $.expression,
          optional($.turbofish),
          $.argument_list,
        ),
      ),

    argument_list: ($) =>
      seq(
        "(",
        optional(seq($.argument, repeat(seq(",", $.argument)), optional(","))),
        ")",
      ),

    index_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq($.expression, token.immediate("["), $.expression, "]"),
      ),
