test/corpus/expressions.txt
================================================================================
Index expression
================================================================================

let x = xs[0]

--------------------------------------------------------------------------------

(source_file
  (top_let_declaration
    (identifier)
    (expression
      (index_expression
        (expression
          (primary_expression
            (identifier)))
        (expression
          (primary_expression
            (integer_literal)))))))

================================================================================
Map literal
================================================================================

let m = ["a": 1, "b": 2]

--------------------------------------------------------------------------------

(source_file
  (top_let_declaration
    (identifier)
    (expression
      (primary_expression
        (map_expression
          (map_entry
            key: (expression
              (primary_expression
                (string_literal
                  (string_content))))
            value: (expression
              (primary_expression
                (integer_literal))))
          (map_entry
            key: (expression
              (primary_expression
                (string_literal
                  (string_content))))
            value: (expression
              (primary_expression
                (integer_literal)))))))))

================================================================================
Match with TypeName subject
================================================================================

let r = match X {
  1 => "one"
  _ => "other"
}

--------------------------------------------------------------------------------

(source_file
  (top_let_declaration
    (identifier)
    (expression
      (match_expression
        value: (primary_expression
          (type_name))
        (match_arm
          pattern: (pattern
            (literal_pattern
              (integer_literal)))
          body: (expression
            (primary_expression
              (string_literal
                (string_content)))))
        (match_arm
          pattern: (pattern
            (wildcard_pattern))
          body: (expression
            (primary_expression
              (string_literal
                (string_content)))))))))

================================================================================
Variant record expression
================================================================================

let c = Circle { radius: 5.0 }

--------------------------------------------------------------------------------

(source_file
  (top_let_declaration
    (identifier)
    (expression
      (variant_record_expression
        (type_name)
        (record_field
          (identifier)
          (expression
            (primary_expression
              (float_literal))))))))

================================================================================
Member call expression
================================================================================

let x = io.print("hello")

--------------------------------------------------------------------------------

(source_file
  (top_let_declaration
    (identifier)
    (expression
      (call_expression
        (expression
          (member_expression
            (expression
              (primary_expression
                (identifier)))
            (identifier)))
        (argument_list
          (argument
            (expression
              (primary_expression
                (string_literal
                  (string_content))))))))))

================================================================================
Unary minus binds looser than member access
================================================================================

let y = -p.x

--------------------------------------------------------------------------------

(source_file
  (top_let_declaration
    (identifier)
    (expression
      (unary_expression
        operand: (expression
          (member_expression
            (expression
              (primary_expression
                (identifier)))
            (identifier)))))))

================================================================================
Lambda parameter list vs tuple expression
================================================================================

let add = (a, b) => a + b
let pair = (1, 2)

--------------------------------------------------------------------------------

(source_file
  (top_let_declaration
    (identifier)
    (expression
      (primary_expression
        (lambda_expression
          (lambda_param
            (identifier))
          (lambda_param
            (identifier))
          (expression
            (binary_expression
              left: (expression
                (primary_expression
                  (identifier)))
              right: (expression
                (primary_expression
                  (identifier)))))))))
  (top_let_declaration
    (identifier)
    (expression
      (primary_expression
        (tuple_expression
          (expression
            (primary_expression
              (integer_literal)))
          (expression
            (primary_expression
              (integer_literal))))))))
